# kademlia

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: Poco.cmake
doc/: Acknowledgements.html
doc/specs/: kademlia.md
examples/: CMakeLists.txt  bootstrap.cpp  cli.cpp  stress.cpp
include/kademlia/: Session.h  first_session.hpp  session.hpp  session_base.hpp
include/kademlia/detail/: Util.h
src/kademlia/: CMakeLists.txt  DiscoverNeighborsTask.cpp  DiscoverNeighborsTask.h  Engine.h  FindValueTask.h  IPEndpoint.cpp  IPEndpoint.h  LookupTask.cpp  LookupTask.h  Message.cpp  Message.h  MessageSerializer.cpp  MessageSerializer.h  MessageSocket.cpp  MessageSocket.h  Network.h  NotifyPeerTask.cpp  NotifyPeerTask.h  Peer.cpp  Peer.h  ResponseCallbacks.cpp  ResponseCallbacks.h  ResponseRouter.cpp  ResponseRouter.h  Session.cpp  SessionImpl.cpp  SessionImpl.h  SocketAdapter.h  StoreValueTask.h  Timer.cpp  Timer.h  Tracker.h  Util.cpp  buffer.hpp  constants.cpp  constants.hpp  discover_neighbors_task.hpp  engine.hpp  error_impl.cpp  first_session.cpp  (+10 more)
test/: FakeSocket.h  TestEngine.h  fake_socket.hpp
test/unit_tests/: CMakeLists.txt  CorruptedMessage.h  DiscoverNeighborsTaskTest.cpp  EngineTest.cpp  FakeSocketTest.cpp  FindValueTaskTest.cpp  IPEndpointTest.cpp  IntegrationTest.cpp  LookupTaskTest.cpp  MessageSerializerTest.cpp  MessageSocketTest.cpp  MessageTest.cpp  Network.cpp  Network.h  NetworkTest.cpp  NotifyPeerTaskTest.cpp  PeerFactory.h  PeerTest.cpp  ResponseCallbacksTest.cpp  ResponseRouterTest.cpp  RoutingTableMock.h  RoutingTableTest.cpp  SocketAdapterTest.cpp  SocketMock.h  StoreValueTaskTest.cpp  TaskFixture.h  TestFakeSocket.cpp  TestStoreValueTask.cpp  TimerTest.cpp  TrackerMock.h  common.cpp  common.hpp  network.cpp  task_fixture.hpp  test_discover_neighbors_task.cpp  test_engine.cpp  test_error.cpp  test_find_value_task.cpp  test_first_session.cpp  test_id.cpp  (+12 more)
test/unit_tests/captures/: pattern_header.out
